# NexusCore-MC

./: .gitignore  Cargo.toml  items.json
src/: lib.rs  main.rs
src/block/: air.rs  bedrock.rs  mod.rs
src/protocol/: encryption.rs  mod.rs  varint.rs
src/protocol/packet/: Batch.rs  ClientToServerHandshake.rs  Helpers.rs  ItemRegistry.rs  LevelChunk.rs  MovePlayer.rs  NetworkChunkPublisherUpdate.rs  NetworkSettings.rs  PlayStatus.rs  PlayerAuthInput.rs  RequestChunkRadius.rs  ServerToClientHandshake.rs  SetPlayerGameType.rs  StartGame.rs  VoxelShapes.rs  actor_identifiers.rs  chunk_publisher.rs  chunk_radius_updated.rs  handshake.rs  itemregistry.rs  levelchunk.rs  login.rs  mod.rs  movement.rs  networksettings.rs  request_network_settings.rs  resource_pack_client_response.rs  resource_pack_stack.rs  resource_packs_info.rs  resourcepacks.rs  start_game.rs  startgame.rs  update_abilities.rs
src/raknet/: protocol.rs  server.rs
src/server/: client.rs  handler.rs  mod.rs
