[package]
name = "NexusCore-MC"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
byteorder = "1.5"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
p384 = { version = "0.13", features = ["ecdh", "ecdsa", "pem"] }
hkdf = "0.12"
sha2 = "0.10"
aes = "0.8"
cfb8 = "0.8"
ctr = "0.9"


